--- a/Lab2_MVC_Andia/Lab2_MVC_Andia/Lab2_MVC_Andia/Views/Bisiesto/Index.cshtml
+++ b/Lab2_MVC_Andia/Lab2_MVC_Andia/Lab2_MVC_Andia/Views/Bisiesto/Index.cshtml
@@ -15,6 +15,8 @@
         <h1>Años Bisiestos y No Bisiestos</h1>
         <br />
         <div>
+		<h5> Agregamos Esta prueba </h5>
+		
             @using (Html.BeginForm("Visualizar", "Bisiesto", FormMethod.Post))
             {
                 <div>
